# gstreamer-plugins-base

./: .gitignore  meson.build
gst/: meson.build
gst-libs/gst/: meson.build
gst-libs/gst/allocators/: meson.build
gst-libs/gst/app/: app_marshal.py  meson.build
gst-libs/gst/audio/: audio_mkenum.py  meson.build
gst-libs/gst/fft/: kiss_fft_s16.h  kiss_fft_s32.h  meson.build
gst-libs/gst/pbutils/: meson.build  pbutils_mkenum.py
gst-libs/gst/riff/: meson.build
gst-libs/gst/rtp/: meson.build
gst-libs/gst/rtsp/: meson.build  rtsp_marshal.py  rtsp_mkenum.py
gst-libs/gst/sdp/: meson.build
gst-libs/gst/tag/: meson.build
gst-libs/gst/video/: meson.build  video_mkenum.py
gst/adder/: meson.build
gst/app/: meson.build
gst/audioconvert/: meson.build
gst/audiorate/: meson.build
gst/audioresample/: meson.build
gst/audiotestsrc/: meson.build
gst/encoding/: meson.build
gst/gio/: meson.build
gst/playback/: meson.build
gst/subparse/: meson.build
gst/tcp/: meson.build
gst/typefind/: meson.build
gst/videoconvert/: meson.build
gst/videorate/: meson.build
gst/videoscale/: meson.build  vs_fill_borders.h  vs_image.h  vs_scanline.h
gst/videotestsrc/: meson.build
gst/volume/: meson.build
sys/: meson.build
sys/ximage/: meson.build
sys/xvimage/: meson.build
tools/: meson.build
